refactor: Implement Youtube 3rd party library as official Youtube SDK is no longer supported (#1778)
build: bump the TARGET_SDK_VERSION to API level 33.

- bump the `KOTLIN_VERSION` to `1.8.0`
- bump the `GRADLE_PLUGIN_VERSION` to `7.0.4`
- bump the `hilt_version` to `2.44`
- bump the `androidXLifeCycle` to `2.6.1`
- bump the `hilt_version` to `1.10.0`

* refactor: replace the official Youtube library with 3rd party library

- Now that the official API from Google is deprecated, so replace the official Youtube library 3rd party.
- bump `targetSdk` to API level 33, and support libraries

Ref:
- https://developers.google.com/youtube/android/player/
- https://github.com/PierfrancescoSoffritti/android-youtube-player

fixes: LEARNER-8794

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -171,7 +171,7 @@
 
         <activity
             android:name="org.edx.mobile.view.CourseUnitNavigationActivity"
-            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
             android:label="@string/app_name"
             android:screenOrientation="user"
             android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
