--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -133,6 +133,9 @@ dependencies {
     // Exo Player
     implementation 'com.google.android.exoplayer:exoplayer:2.16.0'
 
+    // Youtube Player
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.0.0'
+
     // Google cast sdk
     implementation "androidx.mediarouter:mediarouter:1.3.1"
     implementation 'com.google.android.gms:play-services-cast-framework:21.2.0'
