--- a/constants.gradle
+++ b/constants.gradle
@@ -1,6 +1,6 @@
 project.ext {
     APPLICATION_ID = "org.edx.mobile"
-    KOTLIN_VERSION = "1.8.10"
+    KOTLIN_VERSION = "1.8.22"
     GRADLE_PLUGIN_VERSION = "8.0.2"
     COMPILE_SDK_VERSION = 33
     // API Level that the application will target
@@ -9,14 +9,16 @@ project.ext {
     MIN_SDK_VERSION = 21
 
     // App dependencies
-    androidXVersion = '1.0.0'
-    androidXAppCompactVersion = '1.2.0'
+    androidXRecyclerViewVersion = "1.3.0"
+    androidXCardviewVersion = "1.0.0"
+    androidXAnnotationVersion = "1.6.0"
+    androidXAppCompactVersion = "1.6.1"
     kotlin_version_billing = "4.0.0"
     hilt_version = "2.44"
-    gms_google_services = "4.3.10"
+    gms_google_services = "4.3.15"
 
     // Kotlin extensions library versions
-    androidXLifeCycle = '2.6.1'
-    androidXKotlinCore = '1.10.0'
-    androidXKotlinFramgnet = '1.5.7'
+    androidXLifeCycle = "2.6.1"
+    androidXKotlinCore = "1.10.1"
+    androidXKotlinFramgnet = "1.6.0"
 }
