--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
         // Firebase Crashlytics Gradle plugin.
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
         classpath "com.google.dagger:hilt-android-gradle-plugin:${hilt_version}"
+        classpath "org.jacoco:org.jacoco.core:0.8.8"
     }
 }
 
