build: Upgrade Gradle Version to 8.0 (#1795)
Changes Made:

- Upgraded Gradle version from 7.2 to 8.0.
- Updated JDK from 11 to 17.
- Updated Kotlin and other libraries to stable support versions, 
  ensuring compatibility with JDK and AGP
- Reconfigured Jacoco due to issues with the previous plugin 
  becoming outdated.
- Removed NewRelic integration.

Fixes: LEARNER-9330

--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,12 @@ buildscript {
         classpath "com.android.tools.build:gradle:$GRADLE_PLUGIN_VERSION"
         classpath "com.google.gms:google-services:$gms_google_services"
         // Add the dependency for the Performance Monitoring plugin
-        classpath 'com.google.firebase:perf-plugin:1.2.1'  // Performance Monitoring plugin
+        classpath 'com.google.firebase:perf-plugin:1.4.1'  // Performance Monitoring plugin
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
         // Firebase Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
         classpath "com.google.dagger:hilt-android-gradle-plugin:${hilt_version}"
+        classpath "org.jacoco:org.jacoco.core:0.8.8"
     }
 }
 
