chore: update Manifest permissions for Android 13+ (#1792)
chore: update Manifest permissions for Android 13+

- Update Image permissions for Android 13+ after adding the support of API level 33
- Skip storage permissions for 11+ devices
- fix a minor unit-test
fix: LEARNER-9360

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <!-- Required by app for storing downloaded videos to the external storage -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
     <!-- Required by app for capturing image -->
     <uses-permission android:name="android.permission.CAMERA" />
