feat: Add post notifications permission request
- Added functionality to request the "POST_NOTIFICATIONS" permission.
- Conditionally checks if the device's SDK version is greater than or
  equal to Android 33

Fixes: LEARNER-9361

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -26,6 +26,9 @@
     <!-- Required by app to to perform in app purchases -->
     <uses-permission android:name="com.android.vending.BILLING" />
 
+    <!-- Required by app to to post notifications -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
     <!-- Setup for Code Coverage -->
     <instrumentation
         android:name="org.edx.mobile.instrumentation.EdxInstrumentation"
