--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -217,7 +217,7 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     // Material components like Chips and TabLayoutMediator
-    implementation 'com.google.android.material:material:1.5.0-alpha02'
+    implementation 'com.google.android.material:material:1.4.0'
 
     // Braze SDK Integration
     implementation 'com.appboy:appboy-segment-integration:14.0.0'
