--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -50,13 +50,14 @@
     <application
         android:name=".base.RuntimeApplication"
         android:allowBackup="true"
+        android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         tools:replace="android:supportsRtl"
         android:supportsRtl="${supportsRtl}"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme"
-        tools:targetApi="n">
+        tools:targetApi="tiramisu">
 
         <activity
             android:name="org.edx.mobile.view.SplashActivity"
