--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.nonFinalResIds=false
+android.enableR8.fullMode=false
