feat: Progress bar for component identification in a unit
- Introduce a progress bar under the header so a user can get an overall idea of where in the content of the unit they are at.
- The Progress Bar is chopped into the number of components in the unit.
- The Progress Bar is highlighted yellow for the component they are at and grey for others.

fixes: LEARNER-9302

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -197,6 +197,8 @@ dependencies {
 
     // ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    // Segmented Progress bar
+    implementation "com.github.rayzone107:SegmentedProgressBar:1.01"
 
     // Material components like Chips and TabLayoutMediator
     implementation "com.google.android.material:material:1.9.0"
