feat: Enhance Scrolling Experience for Discover Section
- Renamed the title from Discover to Explore the Catalog
- Defaulted the title to be hidden in favor of the webview's internal title
- The title will only be displayed upon scrolling
- Ensured consistency between the discovery experience for both guest users and logged-in users

Fixes: LEARNER-9514

--- a/OpenEdXMobile/AndroidManifest.xml
+++ b/OpenEdXMobile/AndroidManifest.xml
@@ -187,8 +187,7 @@
 
         <activity
             android:name=".view.DiscoveryActivity"
-            android:label="@string/label_discover"
-            android:theme="@style/AppTheme.NoActionBar.TranslucentStatusBar" />
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <activity
             android:name="org.edx.mobile.view.CertificateActivity"
