refactor: Remove DeleteAccountImageTask
Fixes: LEARNER-9544

--- a/OpenEdXMobile/build.gradle
+++ b/OpenEdXMobile/build.gradle
@@ -513,6 +513,7 @@ android {
         abortOnError true
         error "StopShip", "ContentDescription"
         showAll true
+        disable 'NonConstantResourceId'
         warning "TypographyQuotes", "InvalidPackage", "MissingTranslation", "ImpliedQuantity"
     }
 }
