build: Restrict the 'android_screenshot' job execution
This commit disables the 'android_screenshot' job as the Instrument
Test cases are currently failing. The job will remain inactive until
the issues with the test cases are resolved.

To re-enable the job:
- Remove the 'if: false' condition from the 'android_screenshot' job
- Ensure that the Instrument Test cases are functioning as expected

Fixes: LEARNER-9659

--- a/.github/workflows/androidTestSuite.yml
+++ b/.github/workflows/androidTestSuite.yml
@@ -54,6 +54,7 @@ jobs:
           fail_ci_if_error: false
           verbose: true
 
+  # TODO: Re-enable this job when the Instrument Test functionality is restored - Remove 'if: false'
   android_screenshot:
     name: Android Instrumented Tests
     # The macOS VM provided by GitHub Actions has HAXM installed so we are able to create a new AVD
@@ -62,6 +63,7 @@ jobs:
     # Includes Screenshot Tests
     # Ref: https://github.com/marketplace/actions/android-emulator-runner
     runs-on: macos-11
+    if: false
 
     steps:
       # Checkouts the current branch for processing
